# AndroidFeatureSet

./: .gitignore  README.md  build.gradle  settings.gradle
15-puzzle/: build.gradle
Kotlin/: build.gradle
Kotlin/src/main/: AndroidManifest.xml
Kotlin/src/main/res/layout/: kotlinactivity_main.xml
ShareScreen/: build.gradle
ShareScreen/src/main/: AndroidManifest.xml
ShareScreen/src/main/res/layout/: activity_main.xml
ShareScreen/src/main/res/values/: strings.xml  themes.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: circle_style.xml
app/src/main/res/layout/: activity_capture_activy.xml  activity_display_screen.xml  activity_layout_recycle_view.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_config.xml
appAIDLClient/: build.gradle
appAIDLClient/src/main/: AndroidManifest.xml
appAIDLService/: build.gradle
appAIDLService/src/main/: AndroidManifest.xml
appNotification/: build.gradle
appNotification/src/main/: AndroidManifest.xml
appNotification/src/main/res/layout/: activity_launch.xml  activity_main.xml
appProvider/: build.gradle
appProvider/src/main/: AndroidManifest.xml
appProvider/src/main/res/layout/: activity_client.xml
camera-calibration/: build.gradle
color-blob-detection/: build.gradle
face-detection/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
image-manipulations/: build.gradle
label/: build.gradle
label/src/main/: AndroidManifest.xml
label/src/main/assets/label/: 热敏_50_38.txt  红色标签90_38.txt  蓝牙标签机70_38.txt  蓝色标签80_38.txt  蓝色标签90_38.txt
label/src/main/java/jni/: CMakeLists.txt  Check.cpp  Check.h
label/src/main/res/anim/: com_wyc_label_pop_enter_anim.xml  pop_exit_anim.xml
label/src/main/res/color/: com_wyc_label_white_pink.xml
label/src/main/res/drawable/: com_wyc_label_bottom_separator.xml  com_wyc_label_dialog_dialog_top_round_shap.xml  com_wyc_label_edit_text_with_blue_border_style.xml  com_wyc_label_edit_text_with_gray_border_style.xml  com_wyc_label_round_border_sub_gray.xml  com_wyc_label_round_shape.xml  com_wyc_label_round_shape_main_color.xml  com_wyc_label_round_style.xml  com_wyc_label_spinner_style.xml  com_wyc_label_top_separator.xml
label/src/main/res/drawable-xhdpi/: com_wyc_label_bottom_separator.xml  com_wyc_label_edit_text_with_blue_border_style.xml  com_wyc_label_edit_text_with_gray_border_style.xml  com_wyc_label_spinner_style.xml
label/src/main/res/layout/: activity_label_print_setting.xml  com_wyc_label_activity_browse_label.xml  com_wyc_label_activity_format.xml  com_wyc_label_activity_label_print_setting.xml  com_wyc_label_activity_title_layout.xml  com_wyc_label_add_data_item_dialog.xml  com_wyc_label_add_label_format.xml  com_wyc_label_background_edit.xml  com_wyc_label_barcode_item_attr.xml  com_wyc_label_browse_label_adapter.xml  com_wyc_label_date_item_attr.xml  com_wyc_label_drop_down_style.xml  com_wyc_label_im_export_file.xml  com_wyc_label_ip_input.xml  com_wyc_label_qrcode_item_attr.xml  com_wyc_label_rect_item_attr.xml  com_wyc_label_select_dialog.xml  com_wyc_label_shap_item_attr.xml  (+2 more)
lib_myProcessor/: build.gradle
logger/: build.gradle
logger/src/main/: AndroidManifest.xml
map/: build.gradle
map/src/main/: AndroidManifest.xml
opencv/: build.gradle
opencv/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake
opencv/native/jni/abi-x86/: OpenCVConfig.cmake
opencv/native/jni/abi-x86_64/: OpenCVConfig.cmake
permission/src/main/: AndroidManifest.xml
plugin/: build.gradle
plugin/src/main/: AndroidManifest.xml
table_recognition/: build.gradle
table_recognition/libs/: permission-release.aar
table_recognition/src/main/: AndroidManifest.xml
tutorial-1-camerapreview/: build.gradle
tutorial-2-mixedprocessing/: build.gradle
tutorial-3-cameracontrol/: build.gradle
video/: build.gradle
video/src/main/: AndroidManifest.xml
video/src/main/java/com/wyc/video/FFmpeg/cpp/: Api.h  CMakeLists.txt  FFmpegApi.cpp
video/src/main/java/com/wyc/video/FFmpeg/cpp/audio/: AudioApi.cpp  AudioApi.h  AudioEngine.cpp  AudioEngine.h  AudioOpenSL.cpp  AudioOpenSL.h  Definitions.h  IAudioEngine.h  SoundRecording.cpp  SoundRecording.h
video/src/main/java/com/wyc/video/FFmpeg/cpp/recorder/: AudioHandle.cpp  AudioHandle.h  IMediaHandle.h  MediaCoder.cpp  MediaCoder.h  MediaCoderApi.cpp  MediaCoderApi.h  VideoHandle.cpp  VideoHandle.h
video/src/main/java/com/wyc/video/FFmpeg/cpp/thread/: LoopQueue.h  SyncQueue.h
video/src/main/java/com/wyc/video/FFmpeg/cpp/utils/: ImageDef.h  LogUtil.h  MacroUtil.h  YUVUtils.cpp
video/src/main/java/com/wyc/video/FFmpegPlay/cpp/: Api.h  CMakeLists.txt  FFmpegApi.cpp
video/ubuntu_shell/: build_fdk_aac_clang-Version-2.0.2.sh  build_ffmpeg_android.sh  build_x264-Version-0.164.3095.sh
wycMqtt/: build.gradle
wycMqtt/src/main/: AndroidManifest.xml
(+293 files in other folders)
